<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>Package for controlling the robotic arm</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-2-Clause</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
