<?xml version="1.0"?>
<package format="3">
  <name>cctv</name>
  <version>0.0.0</version>
  <description>Captures, undistorts, and publishes images from a camera.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- Specify the build type -->
  <build_type>ament_python</build_type>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- Include the following only if you use these packages -->
  <!-- <exec_depend>python3-ultralytics</exec_depend> -->
  <!-- <exec_depend>python3-shapely</exec_depend> -->

</package>
