<?xml version="1.0"?>
<package format="3">
  <name>image_publisher</name>
  <version>0.0.0</version>
  <description>ROS2 Image Publisher Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
