<?xml version="1.0"?>
<package format="2">
  <name>pyqt_login</name>
  <version>0.0.0</version>
  <description>A ROS2 package with a PyQt5 login window and error email notifications</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>python3</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>python-dotenv</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
