<?xml version="1.0"?>
<package format="3">
  <name>user_gui</name>
  <version>0.0.1</version>
  <description>Combined GUI Application</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>PyQt5</build_depend>
  <build_depend>opencv-python</build_depend>
  <build_depend>ament_index_python</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
