<?xml version="1.0"?>
<package format="3">
  <name>image_publisher</name>
  <version>0.0.0</version>
  <description>ROS2 Image Publisher Package</description>
  <maintainer email="tpingouin@gmail.com">theo</maintainer>
  <license>Apache License 2.0</license> <!-- Updated License -->
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_python</depend> <!-- Added Dependency -->
  
  <exec_depend>python3</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
